# cuda_programming

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  color.h  idxing  img  main.cc  ray.h  vec3.h
docs/: notes.md  recherche_gpu_rendu.md
docs/superpowers/specs/: 2026-07-09-doc-recherche-gpu-design.md
src/: 01_idxing.cu
src/raytracer/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  ray.h  rtweekend.h  sphere.h  vec3.h
